--- a/TemplateCards/template_05/manifest.json
+++ b/TemplateCards/template_05/manifest.json
@@ -1,112 +1,76 @@
 {
-  "meta": {
-    "templateId": "elegance-banquet-v1",
-    "version": 1
+  "canvas": {
+    "width": 540,
+    "height": 760
   },
-
-  "theme": {
-    "vars": {
-      "bg": "#e7dfd3",
-      "card": "#ffffff",
-      "ink": "#415067",
-      "muted": "#505050",
-      "primary": "#415067",
-      "radius": "8px"
-    },
-    "fonts": [
-      "https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;500&display=swap"
+  "editable": {
+    "text": [
+      {
+        "id": "header",
+        "selector": "[data-editable='header']",
+        "type": "text",
+        "default": "YOU’RE INVITED TO A NIGHT OF ELEGANCE AND CELEBRATION"
+      },
+      {
+        "id": "title",
+        "selector": "[data-editable='title']",
+        "type": "text",
+        "default": "Elegance Banquet",
+        "fontFamily": "Great Vibes",
+        "fontSize": 58
+      },
+      {
+        "id": "description",
+        "selector": "[data-editable='description']",
+        "type": "text"
+      },
+      {
+        "id": "month",
+        "selector": "[data-editable='month']",
+        "type": "text",
+        "default": "JULY"
+      },
+      {
+        "id": "day",
+        "selector": "[data-editable='day']",
+        "type": "text",
+        "default": "12",
+        "fontSize": 48
+      },
+      {
+        "id": "year",
+        "selector": "[data-editable='year']",
+        "type": "text",
+        "default": "2028"
+      },
+      {
+        "id": "eventDetails",
+        "selector": "[data-editable='eventDetails']",
+        "type": "text"
+      },
+      {
+        "id": "rsvp",
+        "selector": "[data-editable='rsvp']",
+        "type": "text"
+      }
+    ],
+    "images": [
+      {
+        "id": "cornerTopLeft",
+        "selector": ".top-left",
+        "type": "image"
+      },
+      {
+        "id": "cornerBottomRight",
+        "selector": ".bottom-right",
+        "type": "image"
+      },
+      {
+        "id": "flowerBorder",
+        "selector": ".flower-border",
+        "type": "image",
+        "locked": true
+      }
     ]
-  },
-
-  "page": {
-    "title": "Elegance Banquet Invitation"
-  },
-
-  "hero": {
-    "title": "Elegance Banquet",
-    "subtitle": "You’re invited to a night of elegance and celebration",
-    "background": "https://i.imgur.com/oe1n7mR.png"
-  },
-
-  "event": {
-    "date": "July 12, 2028",
-    "time": "7 PM Onwards",
-    "venue": "Local Church, 108 N Platinum Ave, Deming, NM 88030"
-  },
-
-  "details": {
-    "heading": "Event Details",
-    "body": "The ambiance will be one of sophistication and grandeur, as we come together to savor the joys of life and toast to shared accomplishments."
-  },
-
-  "cta": {
-    "label": "RSVP",
-    "href": "tel:7252302997"
-  },
-
-  "footer": {
-    "note": "Please RSVP by July 10, 2029 to secure your place at this extraordinary event."
-  },
-
-  "backgrounds": [
-    {
-      "selector": ".invitation-wrapper",
-      "image": "https://i.imgur.com/oe1n7mR.png",
-      "size": "contain",
-      "position": "top left"
-    },
-    {
-      "selector": ".invitation-wrapper",
-      "image": "https://i.imgur.com/RLpZq67.png",
-      "size": "contain",
-      "position": "bottom right"
-    }
-  ],
-
-  "styles": {
-    "hero_title": {
-      "fontFamily": "Great Vibes",
-      "fontSize": "58px",
-      "color": "#415067"
-    },
-    "hero_subtitle": {
-      "fontSize": "12px",
-      "letterSpacing": "1px",
-      "color": "#4b4b4b"
-    },
-    "body_text": {
-      "fontSize": "13px",
-      "lineHeight": "1.6",
-      "color": "#505050"
-    }
-  },
-
-  "card": {
-    "size": {
-      "width": 500,
-      "height": 800
-    },
-    "dpi": 300,
-    "safePadding": 40,
-    "bleed": 0,
-    "backgroundColor": "#ffffff",
-    "transparentBackground": false,
-    "export": {
-      "scale": 2,
-      "filename": "elegance-banquet-invitation.png"
-    },
-    "preview": {
-      "fit": true,
-      "zoom": 1
-    }
-  },
-
-  "intro": {
-    "enabled": true,
-    "useOnce": true,
-    "timing": {
-      "fade": 500,
-      "holdAfter": 300
-    }
   }
 }
